updated to 2019.2. compatibility with java 11